# Master-Thesis

./: README.md
Color_detection_ros_Ubuntu/: Dockerfile
Color_detection_ros_Ubuntu/src/pan_tilt_description/: CMakeLists.txt  package.xml
Color_detection_ros_Ubuntu/src/pan_tilt_description/launch/: simulation.launch.py  start.launch.py
Color_detection_ros_Ubuntu/src/pan_tilt_description/meshes/: base.stl  pan_link.stl  tilt_link.stl
Color_detection_ros_Ubuntu/src/pan_tilt_description/scripts/: roi_detection.py  roi_detection_simulation.py  turret_controller.py  vision_tracker.py
Color_detection_ros_Ubuntu/src/pan_tilt_description/urdf/: pan_tilt.urdf  pan_tilt.urdf.xacro
Color_detection_ros_Ubuntu/src/worlds/: target_world.sdf
Model/: Gear.iam  Magisterka.iam  Platforma_Obrotowa.ipt  Podstawa_Obrotowa.ipt  Test.ipt
Model/Gear/Design Accelerator/: Gear 120.ipt  Gear 30.ipt  Gear 60.ipt  Przekładnie walcowe1.iam  Przekładnie walcowe2.iam  Przekładnie walcowe3.iam
Model/Gear/Design Accelerator/OldVersions/: Gear 30.0001.ipt  Gear 60.0001.ipt
Model/Magisterka/18650-cell-holder-1.snapshot.1/: 18650 Cell Holder.step
Model/Magisterka/Design Accelerator/: Przekładnia walcowa11.ipt  Przekładnia walcowa21.ipt  Przekładnie walcowe1.iam  Przekładnie walcowe12.iam
Model/OldVersions/: Gear.0001.iam  Magisterka.0002.iam  Podstawa_Obrotowa.0014.ipt
polsl-aei-theses-main/single-file/: biblio.bib  main.aux  main.bbl  main.blg  main.fdb_latexmk  main.fls  main.lof  main.lot  main.out  main.tex  main.toc
(+19 files in other folders)
